<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent" android:weightSum="1">

        <Button
                android:id="@+id/btn_run_demo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_demo_1"/>

        <Button
                android:id="@+id/btn_run_demo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_demo_2"/>

        <Button
                android:id="@+id/btn_run_demo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_demo_3"/>

        <Button
                android:id="@+id/btn_run_demo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_demo_4"/>

        <Button
                android:id="@+id/btn_run_demo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_demo_5"/>

        <Button
                android:id="@+id/btn_run_demo6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_demo_6"/>

        <Button
                android:id="@+id/btn_run_demo7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_demo_7"/>

        <Button
                android:id="@+id/btn_run_demo8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_demo_8"/>

        <Button
                android:id="@+id/btn_run_demo9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_demo_9"/>

        <Button
                android:id="@+id/btn_run_gc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/run_gc"/>

    </LinearLayout>

</ScrollView>

